@@ -1,0 +1,2 @@
+# exclude package config file and package version file generated by CMake
+Mister00XCMakeModules*.cmake
