@@ -1,0 +1,53 @@
+# cmake/Mister00XCMakeModulesConfig.cmake.in -*-cmake-*-
+#
+# SPDX-License-Identifier: MIT
+#
+# Copyright (c) 2024 Marcel Ilg
+#
+# Permission is hereby granted, free of charge, to any person obtaining
+# a copy of this software and associated documentation files (the
+# "Software"), to deal in the Software without restriction, including
+# without limitation the rights to use, copy, modify, merge, publish,
+# distribute, sublicense, and/or sell copies of the Software, and to
+# permit persons to whom the Software is furnished to do so, subject to
+# the following conditions:
+#
+# The above copyright notice and this permission notice shall be
+# included in all copies or substantial portions of the Software.
+#
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
+# IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY
+# CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
+# TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
+# SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+
+cmake_minimum_required(VERSION 3.3...3.15)
+
+@PACKAGE_INIT@
+
+# The first step is to find out if the user requested any special packages.
+if(Mister00XCMakeModules_FIND_COMPONENTS)
+  # first find out which modules are available
+  file(GLOB _Mister00X_FOUND_MODULE_FILES "@PACKAGE_MODULES_INSTALL_DIR@/*.cmake")
+
+  # get the basename of those modules and store it in _Mister00X_FOUND_COMPONENTS
+  foreach(filepath IN LISTS _Mister00X_FOUND_MODULE_FILES)
+    get_filename_component(_module_name filepath NAME_WLE)
+    list(APPEND _Mister00X_FOUND_COMPONENTS ${_module_name})
+  endforeach()
+
+  # Now find out if all required components are available
+  foreach(component IN LISTS Mister00XCMakeModules_FIND_COMPONENTS)
+    if(component IN_LIST _Mister00X_FOUND_COMPONENTS)
+      set(Mister00XCMakeModules_${component}_FOUND True)
+    else()
+      set(Mister00XCMakeModules_${component}_FOUND False)
+    endif()
+  endforeach()
+endif()
+
+set_and_check(Mister00XCMakeModules_MODULE_PATH "@PACKAGE_MODULES_INSTALL_DIR")
+
+check_required_components(Mister00XCMakeModules)
