@@ -13,3 +13,5 @@ to adhere to [[https://semver.org/spec/v2.0.0.html][Semantic Versioning]].
 - The [[./FindAndLog.cmake][FindAndLog CMake Module]]
 - A [[./README.org][README]] file with usage instructions
 - A [[./LICENSE][License]] file
+- A CMake package configuration and package version file to be installed with
+  the modules for finding them.
